--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "firebase": "^7.2.1",
     "immutable": "^4.0.0-rc.12",
+    "rc-progress": "^2.5.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "0.9.5"
