--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "rc-progress": "^2.5.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "rxjs": "^6.5.3"
   },
   "devDependencies": {},
   "scripts": {
