move to sourceImg

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 REACT_APP_postRoot = /posts/
 REACT_APP_imgx500path = x500Imgs
 REACT_APP_thumbsPath = thumbnails
+REACT_APP_sourcePath = thumbnails
