--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.8.3",
     "firebase": "^7.2.1",
     "immutable": "^4.0.0-rc.12",
     "rc-progress": "^2.5.2",
