--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
 REACT_APP_postRoot = /posts/
-REACT_APP_imgx500path = x500Imgs
-REACT_APP_thumbsPath = thumbnails
+REACT_APP_imgx500path = /x500Imgs/
+REACT_APP_imgx1000path = /x1000Imgs/
+REACT_APP_thumbsPath = /thumbnails/
+REACT_APP_sourcePath = /sourceImgs/
