--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.8.3",
+    "@material-ui/icons": "^4.9.1",
     "firebase": "^7.2.1",
     "immutable": "^4.0.0-rc.12",
     "rc-progress": "^2.5.2",
@@ -19,5 +20,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage" : "http://tinekekeramiek.nl/adminv2"
+  "homepage": "http://tinekekeramiek.nl/adminv2"
 }
